[package]
name = "BitcoinLottery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.30.0"
bech32 = { version = "0.9.0", default-features = false }
hashes = { package = "bitcoin_hashes", version = "0.12.0", default-features = false }
secp256k1 = { version = "0.27.0", default-features = false, features = ["bitcoin_hashes"] }
hex_lit = "0.1.1"
reqwest = "0.11.17"
tokio = { version = "1.28.0", features = ["full"] }
json = "0.12.4"
serde_json = "1.0.94"
hex = "0.4.3"
rand = "0.8.5"